manifests/service-interconnect/01-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: service-interconnect
  namespace: health-checks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-interconnect
  template:
    metadata:
      labels:
        app: service-interconnect
    spec:
      containers:
        - name: container
          image: 'quay.io/ralvarez1/service-interconnect:1.0'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
