manifests/service-interconnect/02-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-interconnect
  namespace: health-checks
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: service-interconnect
